--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 # Copy this file to .env.local and fill the values before running the dev server.
 # Do NOT commit your real keys to git.
 
-VITE_SUPABASE_URL=https://your-project-ref.supabase.co
-VITE_SUPABASE_PUBLISHABLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...REPLACE_WITH_ANON_KEY
+VITE_SUPABASE_URL="https://wrwtqfosirdyqeizsgbt.supabase.co"
+VITE_SUPABASE_PUBLISHABLE_KEY="sb_publishable_Y69x6tjwBOCA9MOwDgzxPw_5GIJTM-4"
 
 # Optional: change port used by Vite (will override default 5173 when you run with --port)
 # VITE_PORT=5173
